--- a/_posts/Diary/2019-2-22-TIL1.md
+++ b/_posts/Diary/2019-2-22-TIL1.md
@@ -1,7 +1,9 @@
 ---
 layout: post
+title:  "useful links"
+date:   2019-02-22
 comments: true
-categories: diary
+categories: Diary
 ---
 ## 블로그 시작
 10년전에 잠깐해봤던 블로그를 다시 해보려고 한다.
