--- a/_posts/Work/공공데이터 가져오기.md
+++ b/_posts/Work/공공데이터 가져오기.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title : 구글colab 사용하여 구글drive에 공공데이터 수집하기
+comments: true
+categories: Work
+---
+
 
 # 구글드라이브 마운트하기
 ### 아래코드 실행하여 url에 접속하여 인증코드 입력하면 구글드라이브가 마운트된다
