--- a/_posts/Work/공공데이터 가져오기.md
+++ b/_posts/Work/공공데이터 가져오기.md
@@ -127,7 +127,7 @@ import sqlite3
  
 def collect_land(ym,lawd_cd):
  
-    API_KEY = "UmeOG8fXLWmdW2DwQMpFHgFwx%2BkwkYDtw16TtQeaP4xzbqtKCv08tZUAY8UcykdaFQ6Q92pbC4jJruoenAfXjA%3D%3D"
+    API_KEY = "<API키입력>"
     url="http://openapi.molit.go.kr/OpenAPI_ToolInstallPackage/service/rest/RTMSOBJSvc/getRTMSDataSvcAptTradeDev"
  
     url=url+"?LAWD_CD="+lawd_cd+"&DEAL_YMD="+ym+"&numOfRows=1000000"+"&serviceKey="+API_KEY
